--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "16.0.3",
+    "next-intl": "^4.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-particles": "^2.12.2",
