--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.2.0",
     "react-particles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tsparticles": "^3.9.1"
   },
