--- a/web/package.json
+++ b/web/package.json
@@ -9,17 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^5.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/client": "^7.13.0",
+    "@sanity/image-url": "^1.2.0",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "grapheme-splitter": "^1.0.4",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.3",
     "next-intl": "^4.5.3",
+    "next-sanity": "^11.6.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-particles": "^2.12.2",
