--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@sanity/image-url": "^1.2.0",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
+    "@upstash/redis": "^1.35.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "grapheme-splitter": "^1.0.4",
