--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@portabletext/react": "^5.0.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@sanity/client": "^7.13.0",
     "@sanity/image-url": "^1.2.0",
