--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@upstash/redis": "^1.35.6",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "grapheme-splitter": "^1.0.4",
