--- a/web/package.json
+++ b/web/package.json
@@ -29,11 +29,11 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "next-intl": "^4.5.3",
     "next-sanity": "^11.6.8",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-particles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "swiper": "^12.0.3",
